--- a/docs/site/package.json
+++ b/docs/site/package.json
@@ -8,7 +8,7 @@
     "prebuild": "git submodule update --init --recursive; node src/js/generate-import-context.js; node src/js/convert-awesome-sui.mjs",
     "prestart": "git submodule update --init --recursive; node src/js/convert-awesome-sui.mjs",
     "start": "node src/utils/grpc-download.js; docusaurus graphql-to-doc:alpha; docusaurus graphql-to-doc:beta; node src/utils/getopenrpcspecs.js; node src/utils/massagegraphql.js; docusaurus start",
-    "build": "node src/js/generate-import-context.js; node src/utils/grpc-download.js; docusaurus graphql-to-doc:alpha; docusaurus graphql-to-doc:beta; node src/js/sync-graphql-i18n.js; node src/utils/getopenrpcspecs.js; node src/utils/massagegraphql.js; docusaurus build",
+    "build": "node src/js/generate-import-context.js; node src/utils/grpc-download.js; docusaurus graphql-to-doc:alpha; docusaurus graphql-to-doc:beta; node src/utils/getopenrpcspecs.js; node src/utils/massagegraphql.js; docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
@@ -75,6 +75,7 @@
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.23.4",
     "@docusaurus/core": "3.8.1",
+    "@docusaurus/plugin-client-redirects": "3.8.1",
     "@docusaurus/module-type-aliases": "3.8.1",
     "@docusaurus/preset-classic": "3.8.1",
     "@docusaurus/remark-plugin-npm2yarn": "3.8.1",
