--- a/.github/workflows/docs-pages.yml
+++ b/.github/workflows/docs-pages.yml
@@ -50,6 +50,7 @@ jobs:
         env:
           DOCS_URL: ${{ vars.DOCS_URL }}
           DOCS_BASE_URL: ${{ vars.DOCS_BASE_URL }}
+          DOCS_ALLOW_PARTIAL_I18N: "true"
         run: pnpm build
 
       - name: Upload artifact
